--- a/en_itn/requirements_nlp.txt
+++ b/en_itn/requirements_nlp.txt
@@ -34,7 +34,7 @@ matplotlib==3.4.1
 mecab-python3==1.0.3
 megatron-lm==2.2.0
 multidict==5.1.0
-nemo-toolkit @ git+https://github.com/NVIDIA/NeMo.git@fbc5c2b4033896b75f643cf169976c1d38505d65
+#nemo-toolkit @ git+https://github.com/NVIDIA/NeMo.git@fbc5c2b4033896b75f643cf169976c1d38505d65
 numba==0.53.1
 numpy==1.20.2
 oauthlib==3.1.0
@@ -49,7 +49,7 @@ protobuf==3.15.8
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pybind11==2.6.2
-pynini @ file:///home/conda/feedstock_root/build_artifacts/pynini_1605833195807/work
+#pynini @ file:///home/conda/feedstock_root/build_artifacts/pynini_1605833195807/work
 pyparsing==2.4.7
 PySocks==1.7.1
 python-dateutil==2.8.1
