--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,10 @@ tokenizers==0.9.4
 torch==1.5.1
 torchvision==0.6.1
 transformers==4.0.1
+wandb==0.11.0
+tensorboard==2.5.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorboardX==2.4
+tensorflow==2.5.0
+tensorflow-estimator==2.5.0
